# llm-lab

./: .gitignore  README.md
crewai-hierarchical-process/: custom_manager.py  delegation_test.py  main.py  requirements.txt
crewai-most-simple-example/: main.py  pyproject.toml
crewai-most-simple-example/agents/: buscador.py  editor.py  redator.py
crewai-most-simple-example/crew/: equipe.py
crewai-most-simple-example/tasks/: buscar.py  editar.py  redigir.py
crewai-most-simple-example/tools/: tools.py
crewai-with-langgraph/: README.md  main.py  requirements.txt
crewai-with-langgraph/crew/: agents.py  crew.py  tools.py
crewai-with-langgraph/graph/: graph.py  nodes.py  state.py
experiments/lg-t1-multi-agent/: graph.py  pyproject.toml
experiments/lg-t2-multi-agent/: graph.py  pyproject.toml
experiments/lg-t2-multi-agent/agents/: agent.py
experiments/lg-t2-multi-agent/prompts/: system_prompt.py
experiments/lg-t2-multi-agent/tools/: db_tools.py  tavily.py
experiments/lg-t4-multi-agent/: graph.py  main.py  pyproject.toml
experiments/lg-t4-multi-agent/agents/: agent.py  supervisor.py
experiments/lg-t4-multi-agent/nodes/: node.py
experiments/lg-t4-multi-agent/prompts/: primary_prompts.py  scheduling_prompts.py
experiments/lg-t4-multi-agent/states/: state.py
experiments/lg-t4-multi-agent/tools/: basic_tool.py  calendar_tools.py  sheet_tools.py
experiments/lg-t5-multi-agent/: main.py  requirements.txt
lg-multi-agent-collaboration/: README.md  main.py  pyproject.toml
lg-multi-agent-collaboration/agents/: agent.py
lg-multi-agent-collaboration/nodes/: node.py
lg-multi-agent-collaboration/prompts/: system_prompts.py
lg-multi-agent-collaboration/sandbox/: original.py
lg-multi-agent-collaboration/states/: state.py
lg-multi-agent-collaboration/tools/: repl.py  tavily.py
lg-multi-agent-supervisor/: README.md  main.py  pyproject.toml
lg-quick-start/: README.md  pyproject.toml
lg-quick-start/sandbox/: part1.py  part2.py  part3.py  part4.py  part5.py  part6.py  part7.py  simple_tavily.py
lg-simple-chatbot/: graph.py  requirements.txt
lg-simple-reflection-agent/: main.py  pyproject.toml
simple-chatbot/: graph.py  main.py
simple-chatbot/agents/: agent.py  (+1 more)
(+21 files in other folders)
